--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="top">
-      <img class="Logo" src="./Photo/Logotemplate.JPG" alt="Company Logo" />
+      <img class="Logo" src="./Photo/Logotemplate.jpg" alt="Company Logo" />
       <h2 class="title">Employee Photo Board</h2>
       <div class="explainedMarking">
         <div class="explanation SLT"><p>Senior Leadership Team</p></div>
@@ -25,12 +25,12 @@
         <h4 class="TeamName">Team name</h4>
         <div class="EmployeesContainer">
           <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="SLT" />
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="SLT" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="SLT" />
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="SLT" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
@@ -55,22 +55,22 @@
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
@@ -100,57 +100,22 @@
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man4.JPG" alt="Employee picture" class="EMP" />
-            <p class="employeeName">Employee Name</p>
-            <p>Job Title</p>
-          </div>
-          <div class="Employee-item">
-            <img src="./Photo/man2.jpg" alt="Employee picture" class="PAT" />
-            <p class="employeeName">Employee Name</p>
-            <p>Job Title</p>
-          </div>
-          <div class="Employee-item">
-            <img src="./Photo/woman1.jpg" alt="Employee picture" class="EMP" />
-            <p class="employeeName">Employee Name</p>
-            <p>Job Title</p>
-          </div>
-          <div class="Employee-item">
-            <img src="./Photo/woman2.jpg" alt="Employee picture" class="EMP" />
-            <p class="employeeName">Employee Name</p>
-            <p>Job Title</p>
-          </div>
-          <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="EMP" />
-            <p class="employeeName">Employee Name</p>
-            <p>Job Title</p>
-          </div>
-          <div class="Employee-item">
-            <img src="./Photo/man3.JPG" alt="Employee picture" class="EMP" />
-            <p class="employeeName">Employee Name</p>
-            <p>Job Title</p>
-          </div>
-          <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="EMP" />
-            <p class="employeeName">Employee Name</p>
-            <p>Job Title</p>
-          </div>
-          <div class="Employee-item">
-            <img src="./Photo/man4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
@@ -170,22 +135,22 @@
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
@@ -205,22 +170,57 @@
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man4.jpg" alt="Employee picture" class="EMP" />
+            <p class="employeeName">Employee Name</p>
+            <p>Job Title</p>
+          </div>
+          <div class="Employee-item">
+            <img src="./Photo/man2.jpg" alt="Employee picture" class="PAT" />
+            <p class="employeeName">Employee Name</p>
+            <p>Job Title</p>
+          </div>
+          <div class="Employee-item">
+            <img src="./Photo/woman1.jpg" alt="Employee picture" class="EMP" />
+            <p class="employeeName">Employee Name</p>
+            <p>Job Title</p>
+          </div>
+          <div class="Employee-item">
+            <img src="./Photo/woman2.jpg" alt="Employee picture" class="EMP" />
+            <p class="employeeName">Employee Name</p>
+            <p>Job Title</p>
+          </div>
+          <div class="Employee-item">
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="EMP" />
+            <p class="employeeName">Employee Name</p>
+            <p>Job Title</p>
+          </div>
+          <div class="Employee-item">
+            <img src="./Photo/man3.jpg" alt="Employee picture" class="EMP" />
+            <p class="employeeName">Employee Name</p>
+            <p>Job Title</p>
+          </div>
+          <div class="Employee-item">
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="EMP" />
+            <p class="employeeName">Employee Name</p>
+            <p>Job Title</p>
+          </div>
+          <div class="Employee-item">
+            <img src="./Photo/man4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
@@ -250,22 +250,22 @@
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
@@ -295,22 +295,22 @@
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
@@ -343,22 +343,22 @@
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
@@ -388,22 +388,22 @@
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man3.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man3.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/woman4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/woman4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
           <div class="Employee-item">
-            <img src="./Photo/man4.JPG" alt="Employee picture" class="EMP" />
+            <img src="./Photo/man4.jpg" alt="Employee picture" class="EMP" />
             <p class="employeeName">Employee Name</p>
             <p>Job Title</p>
           </div>
